--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       </div>
     </section>
     <section class="w-full max-w-xl text-center mb-6">
-      <a href="main.html" class="inline-block bg-blue-600 text-white px-8 py-3 rounded-lg btn hover:bg-blue-700 text-sm" id="login-button"></a>
+      <a href="main.html" class="inline-block bg-blue-600 text-white px-8 py-3 rounded-lg btn hover:bg-blue-700 text-base font-bold" id="login-button">ورود به سایت</a>
     </section>
     <section class="w-full max-w-xl text-center mb-6">
       <h2 class="text-lg font-bold text-blue-900 mb-3">حامیان پروژه</h2>
