--- a/SOS.html
+++ b/SOS.html
@@ -9,64 +9,48 @@
     <!-- Vazir Font -->
     <link href="https://cdn.jsdelivr.net/npm/vazirmatn@33.0.0/Vazirmatn-font-face.css" rel="stylesheet">
     <style>
-        body {
-            font-family: 'Vazir', sans-serif;
-            background-color: #f8f9fa;
-            color: #333;
-            margin: 0;
+        html, body {
+            height: 100%;
             min-height: 100vh;
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+        body {
             display: flex;
             flex-direction: column;
-            overflow-x: hidden;
+            min-height: 100vh;
+            height: 100vh;
+            overflow: hidden;
+        }
+        main {
+            flex: 1 1 auto;
+            overflow-y: auto;
+            margin-top: 70px;
+            margin-bottom: 70px;
+            padding: 0.5rem 0;
+            max-width: 100vw;
+            box-sizing: border-box;
         }
         .container {
             max-width: 800px;
             margin: 0 auto;
             padding: 1rem;
+            box-sizing: border-box;
         }
-        .header {
-            text-align: center;
-            margin-bottom: 1.5rem;
+        .header h1 {
+            font-size: 1.5rem;
         }
-        .highlight-card {
-            background-color: #dc3545;
-            color: white;
-            padding: 1rem;
-            border-radius: 10px;
-            text-align: center;
-            margin-bottom: 1rem;
+        .highlight-card, .emergency-section, .download-btn {
+            padding: 0.7rem;
             font-size: 1rem;
         }
-        .highlight-card h3 {
-            margin-bottom: 0.75rem;
-            font-size: 1.1rem;
-        }
-        .emergency-section {
-            margin-bottom: 1.5rem;
-        }
         .emergency-section h4 {
-            color: #007bff;
-            border-bottom: 2px solid #007bff;
-            padding-bottom: 0.5rem;
             font-size: 1.1rem;
-        }
-        .emergency-list {
-            list-style: none;
-            padding: 0;
-            margin: 0;
         }
         .emergency-list li {
-            padding: 0.5rem 0;
             font-size: 0.98rem;
-            line-height: 1.7;
-        }
-        .emergency-list a {
-            color: #007bff;
-            text-decoration: none;
-            word-break: break-all;
-        }
-        .emergency-list a:hover {
-            text-decoration: underline;
+            padding: 0.3rem 0;
         }
         .source {
             font-size: 0.85rem;
@@ -114,6 +98,12 @@
             z-index: 10;
         }
         @media (max-width: 600px) {
+            main {
+                margin-top: 60px;
+                margin-bottom: 60px;
+                padding: 0.2rem 0;
+                max-height: calc(100vh - 120px);
+            }
             .container {
                 padding: 0.5rem 0.2rem;
             }
@@ -121,19 +111,14 @@
                 font-size: 1.1rem;
             }
             .highlight-card, .emergency-section, .download-btn {
-                padding: 0.5rem;
-                font-size: 0.95rem;
+                padding: 0.4rem;
+                font-size: 0.93rem;
             }
             .emergency-section h4 {
-                font-size: 1rem;
+                font-size: 0.97rem;
             }
             .emergency-list li {
-                font-size: 0.92rem;
-                padding: 0.3rem 0;
-            }
-            main {
-                margin-top: 60px;
-                margin-bottom: 60px;
+                font-size: 0.91rem;
                 padding: 0.2rem 0;
             }
         }
