--- a/main.html
+++ b/main.html
@@ -9,17 +9,64 @@
   <script src="src/babel.min.js"></script>
   <link href="src/tailwind.min.css" rel="stylesheet">
   <link href="src/font-face.css" rel="stylesheet">
+  <link href="src/main-style.css" rel="stylesheet">
   <style>
+    html, body {
+      height: 100%;
+      min-height: 100vh;
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
     body {
-      background-color: #000;
-      color: #fff;
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
+      height: 100vh;
+      overflow: hidden;
+      background: linear-gradient(to bottom, #eff6ff, #dbeafe);
+      color: #1e293b;
       font-family: 'Vazir', sans-serif;
+    }
+    main {
+      flex: 1 1 auto;
+      overflow-y: auto;
+      margin-top: 80px;
+      margin-bottom: 80px;
+      padding: 0.5rem 0;
+      max-width: 100vw;
+      box-sizing: border-box;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: flex-start;
+    }
+    .container {
+      max-width: 1200px;
+      margin: 0 auto;
+      padding: 0 1.5rem;
+      box-sizing: border-box;
     }
     .member-img {
       width: 100px;
       height: 100px;
       border-radius: 50%;
       object-fit: cover;
+    }
+    @media (max-width: 600px) {
+      main {
+        margin-top: 60px;
+        margin-bottom: 60px;
+        padding: 0.2rem 0;
+        max-height: calc(100vh - 120px);
+      }
+      .container {
+        padding: 0.5rem 0.2rem;
+      }
+      .member-img {
+        width: 70px;
+        height: 70px;
+      }
     }
   </style>
 </head>
