--- a/SOS.html
+++ b/SOS.html
@@ -8,121 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Vazir Font -->
     <link href="https://cdn.jsdelivr.net/npm/vazirmatn@33.0.0/Vazirmatn-font-face.css" rel="stylesheet">
-    <style>
-        html, body {
-            height: 100%;
-            min-height: 100vh;
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-        body {
-            display: flex;
-            flex-direction: column;
-            min-height: 100vh;
-            height: 100vh;
-            overflow: hidden;
-        }
-        main {
-            flex: 1 1 auto;
-            overflow-y: auto;
-            margin-top: 70px;
-            margin-bottom: 70px;
-            padding: 0.5rem 0;
-            max-width: 100vw;
-            box-sizing: border-box;
-        }
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 1rem;
-            box-sizing: border-box;
-        }
-        .header h1 {
-            font-size: 1.5rem;
-        }
-        .highlight-card, .emergency-section, .download-btn {
-            padding: 0.7rem;
-            font-size: 1rem;
-        }
-        .emergency-section h4 {
-            font-size: 1.1rem;
-        }
-        .emergency-list li {
-            font-size: 0.98rem;
-            padding: 0.3rem 0;
-        }
-        .source {
-            font-size: 0.85rem;
-            color: #6c757d;
-            text-align: center;
-            margin-top: 1rem;
-        }
-        .download-btn {
-            text-align: center;
-            margin-bottom: 1rem;
-        }
-        /* Header and Footer Styles */
-        .min-h-screen {
-            min-height: 100vh;
-        }
-        .bg-blue-900 {
-            background-color: #1e3a8a !important;
-        }
-        .backdrop-blur-sm {
-            backdrop-filter: blur(10px);
-        }
-        .text-white {
-            color: #fff;
-        }
-        .shadow-md {
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        }
-        header {
-            position: fixed;
-            top: 0;
-            left: 0;
-            right: 0;
-            z-index: 10;
-        }
-        main {
-            margin-top: 70px;
-            margin-bottom: 70px;
-            padding: 0.5rem 0;
-        }
-        footer {
-            position: fixed;
-            bottom: 0;
-            left: 0;
-            right: 0;
-            z-index: 10;
-        }
-        @media (max-width: 600px) {
-            main {
-                margin-top: 60px;
-                margin-bottom: 60px;
-                padding: 0.2rem 0;
-                max-height: calc(100vh - 120px);
-            }
-            .container {
-                padding: 0.5rem 0.2rem;
-            }
-            .header h1 {
-                font-size: 1.1rem;
-            }
-            .highlight-card, .emergency-section, .download-btn {
-                padding: 0.4rem;
-                font-size: 0.93rem;
-            }
-            .emergency-section h4 {
-                font-size: 0.97rem;
-            }
-            .emergency-list li {
-                font-size: 0.91rem;
-                padding: 0.2rem 0;
-            }
-        }
-    </style>
+    <link href="src/main-style.css" rel="stylesheet">
+    <!-- حذف استایل‌های داخلی و انتقال کامل به main-style.css -->
 </head>
 <body class="min-h-screen text-gray-800 flex flex-col overflow-hidden bg-gray-100">
   <!-- Header -->
@@ -202,6 +89,8 @@
   </footer>
 
     <!-- Bootstrap JS and Popper.js -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="src/bootstrap.bundle.min.js"></script>
+    <script src="src/common-header-footer.js"></script>
+    <script src="src/SOS.js"></script>
 </body>
 </html>
