--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
       <button id="installPrompt" class="mt-4 bg-blue-600 text-white px-6 py-2 rounded-lg btn hover:bg-blue-700 text-sm">
         افزودن به صفحه اصلی
       </button>
+      <div class="mt-4 text-red-600 font-bold text-sm">⚠️ لطفاً لینک را پیامک نکنید. ارسال لینک از طریق پیامک ممکن نیست.</div>
     </section>
     <section class="bg-white p-6 rounded-xl shadow-lg mb-6 w-full max-w-xl text-center">
       <h2 class="text-xl font-bold text-blue-900 mb-3" id="share-title"></h2>
