--- a/SOS.html
+++ b/SOS.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>شماره‌های اضطراری ایران</title>
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="src/bootstrap.bundle.min.js" rel="stylesheet">
     <!-- Vazir Font -->
-    <link href="https://cdn.jsdelivr.net/npm/vazirmatn@33.0.0/Vazirmatn-font-face.css" rel="stylesheet">
+    <link href="src/Vazirmatn-font-face.css" rel="stylesheet">
     <link href="src/main-style.css" rel="stylesheet">
     <!-- حذف استایل‌های داخلی و انتقال کامل به main-style.css -->
 </head>
@@ -16,11 +16,6 @@
   <header class="fixed top-0 left-0 right-0 bg-blue-900/90 backdrop-blur-sm text-white shadow-md z-10">
     <div class="container mx-auto px-6 py-4 flex justify-between items-center">
       <h1 class="text-2xl sm:text-3xl font-extrabold">برای ایران</h1>
-      <nav class="hidden sm:flex space-x-4 space-x-reverse">
-        <a href="index.html#features" class="hover:text-blue-200 transition">ویژگی‌ها</a>
-        <a href="index.html#add-to-home" class="hover:text-blue-200 transition">نصب اپ</a>
-        <a href="index.html#share" class="hover:text-blue-200 transition">اشتراک‌گذاری</a>
-      </nav>
     </div>
   </header>
   <main class="container mx-auto px-6 py-20 flex-1 overflow-y-auto" style="margin-top:80px; margin-bottom:80px;">
