--- a/Residences.html
+++ b/Residences.html
@@ -90,7 +90,7 @@
   <!-- Footer -->
   <footer class="fixed bottom-0 left-0 right-0 bg-blue-900/90 backdrop-blur-sm text-white shadow-md z-10">
     <div class="container mx-auto px-6 py-4 text-center">
-      <p class="text-sm">© 2025 برای ایران | پشتیبانی: t.me/m4tinbeigipv</p>
+      <p class="text-sm">© 1404 برای ایران</p>
     </div>
   </footer>
 
