--- a/ir.html
+++ b/ir.html
@@ -134,7 +134,7 @@
         }
     </style>
 </head>
-<body class="min-h-screen text-gray-800 flex flex-col overflow-hidden bg-gray-100">
+<body class="min-h-screen text-gray-800 flex flex-col bg-gray-100" style="overflow-x:hidden;">
   <!-- Header -->
   <header class="fixed top-0 left-0 right-0 bg-blue-900/90 backdrop-blur-sm text-white shadow-md z-10">
     <div class="container mx-auto px-6 py-4 flex justify-between items-center">
@@ -142,7 +142,7 @@
 
     </div>
   </header>
-  <main class="container mx-auto px-6 py-20 flex-1 overflow-y-auto" style="margin-top:80px; margin-bottom:80px;">
+  <main class="container mx-auto px-6 py-20 flex-1" style="margin-top:80px; margin-bottom:80px; overflow-y:auto;">
     <div class="container">
         <div class="header">
             <h1>منابع ایرانی</h1>
@@ -160,7 +160,7 @@
   <!-- Footer -->
   <footer class="fixed bottom-0 left-0 right-0 bg-blue-900/90 backdrop-blur-sm text-white shadow-md z-10">
     <div class="container mx-auto px-6 py-4 text-center">
-      <p class="text-sm">© 2025 برای ایران | پشتیبانی: t.me/m4tinbeigipv</p>
+      <p class="text-sm">© 2025 برای ایران</p>
     </div>
   </footer>
 
