--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <!-- Favicon for iOS -->
   <link rel="apple-touch-icon" href="file/icon.png">
 </head>
-<body class="min-h-screen text-gray-800 flex flex-col overflow-hidden">
+<body class="min-h-screen text-gray-800 flex flex-col">
   <!-- Header -->
   <header class="fixed top-0 left-0 right-0 bg-blue-900/90 backdrop-blur-sm text-white shadow-md z-10">
     <div class="container mx-auto px-6 py-4 flex justify-between items-center">
@@ -33,7 +33,7 @@
       </nav>
     </div>
   </header>
-  <main class="container mx-auto px-6 py-10 flex-1 flex flex-col justify-center items-center overflow-hidden" style="margin-top:80px; margin-bottom:80px; min-height:calc(100vh - 160px);">
+  <main class="container mx-auto px-6 py-10 flex-1 flex flex-col justify-center items-center" style="margin-top:80px; margin-bottom:80px; min-height:calc(100vh - 160px);">
     <section class="bg-white p-6 rounded-xl shadow-lg mb-6 w-full max-w-xl text-center">
       <h2 class="text-xl font-bold text-blue-900 mb-3" id="features-title"></h2>
       <ul class="list-disc list-inside space-y-2 text-gray-700 text-right text-sm" id="features-list"></ul>
