--- a/main.html
+++ b/main.html
@@ -88,7 +88,7 @@
     }
   </style>
 </head>
-<body class="min-h-screen text-gray-800 flex flex-col overflow-hidden bg-gray-100">
+<body class="min-h-screen text-gray-800 flex flex-col bg-gray-100">
   <!-- Header -->
   <header class="fixed top-0 left-0 right-0 bg-blue-900/90 backdrop-blur-sm text-white shadow-md z-10">
     <div class="container mx-auto px-6 py-4 flex justify-between items-center">
